<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/class1"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/class1" />

            <Button
                android:id="@+id/class2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/class2" />

            <Button
                android:id="@+id/class3"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/class3" />

            <Button
                android:id="@+id/class4"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/class4" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
