<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/fix_category_class"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/category_class"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_class"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@color/purple_700"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/fix_category_class"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/fix_category_menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/category_menu"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fix_category_class" />

    <Spinner
        android:id="@+id/spinner_menu"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_200"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/fix_category_menu"
        app:layout_constraintTop_toBottomOf="@+id/spinner_class" />


    <TextView
        android:id="@+id/add_alarm_date"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fix_category_menu" />


    <EditText
        android:id="@+id/editText_start_date"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:inputType="date"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_start_time"
        app:layout_constraintStart_toEndOf="@+id/add_alarm_date"
        app:layout_constraintTop_toBottomOf="@+id/spinner_menu"
        tools:text="2021-11-10" />

    <EditText
        android:id="@+id/editText_start_time"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="time"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/editText_start_date"
        app:layout_constraintTop_toBottomOf="@id/spinner_menu"
        tools:text="10:00" />


    <TextView
        android:id="@+id/slash"
        android:layout_width="10dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/slash"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_end_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText_start_time"
        app:layout_constraintTop_toBottomOf="@+id/spinner_menu" />

    <EditText
        android:id="@+id/editText_end_date"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:inputType="date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_start_date"
        tools:text="2021-11-11" />

    <EditText
        android:id="@+id/editText_end_time"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="time"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/editText_end_date"
        app:layout_constraintTop_toBottomOf="@id/editText_start_time"
        tools:text="11:11" />


    <TextView
        android:id="@+id/add_alarm_title"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_end_date" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:tooltipText="title"
        app:layout_constraintStart_toEndOf="@+id/add_alarm_title"
        app:layout_constraintTop_toBottomOf="@+id/editText_end_date"
        tools:text="제목제목제목" />


    <TextView
        android:id="@+id/add_alarm_content"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_alarm_title" />

    <EditText
        android:id="@+id/editText_content"
        android:layout_width="230dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toEndOf="@+id/add_alarm_content"
        app:layout_constraintTop_toBottomOf="@+id/editText_title"
        tools:text="메모메모메모" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/save"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>