<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/calendar_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:text="2021-11-29"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_weight="3" />

                <Button
                    android:id="@+id/add_item"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="50dp"
                    android:text="@string/add_item" />

            </LinearLayout>


            <view
                android:id="@+id/divider"
                class="androidx.constraintlayout.widget.ConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@id/calendar_item_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar_item_date" />


            <TextView
                android:id="@+id/calendar_item_title"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:text="@string/calendar_item_title"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/calendar_item_content"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:text="@string/calendar_item_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
